2003-07-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* Updated pixmap_engine since x_imagelib_load_file() was changed.

2003-07-05  MINAMI Hirokazu  <minami@mistfall.net>

	* Changed API of the x_imagelib_load_file() function.

2003-07-03 Araki Ken <arakiken@users.sf.net>

	* Modified a little README,man/mlterm.1,doc/ja/README.ja

2003-07-01 Araki Ken <arakiken@users.sf.net>

	* Updated tool/mlconfig/po/de.po.
	  (Thanks to Mike Fabian)

2003-07-01 Araki Ken <arakiken@users.sf.net>

	* Updated tool/mlconfig/po/zh_TW.po.
	  (Thanks to Ambrose Li)

2003-06-30 Araki Ken <arakiken@users.sf.net>

	* Compiled mlcc and pixmap_engine by default.
	* Added sample3 description to doc/en/README.ja and man/mlterm.1.
	* Added sample3 to mc_sb_view.c.

2003-06-29 Araki Ken <arakiken@users.sf.net>

	* If 5380 request is denied as a result of challenge failure,
	  #forbidden is returned.
	* Set "@im=none" as the value of XMODIFIERS by default.
	* Fixed contrib/tool/mlcc/Makefile.in and removed contrib/tool/mlcc/Makefile.
	* Added mlcc to --with-tools in configure.in.

2003-06-29 Seiichi SATO <ssato@sh.rim.or.jp>

	* Renamed entry function name of scrollbar engine to x_*_sb_engine_new.
	* '-export-dynamic' is only used when you specify 
	  -with-scrollbars=pixmap_engine.
	* Fixed a description for --with-scrollbars.

2003-06-29  MINAMI Hirokazu  <minami@mistfall.net>

	* re-introduced "mlcc" for as a sample of a configurator
	on the mlterm.

2003-06-29 Araki Ken <arakiken@users.sf.net>

	* Minor fixes of pixmap_engine.c and x_sb_view_factory.c.

2003-06-29 Seiichi SATO <ssato@sh.rim.or.jp>

	* Fixed segfault with scrollbar rcfile which does not specify engine.
	* Added VPATH to Makefile.in of pixmap_engine
	* Minor bugfix of Makefile.in of mlterm-menu.

2003-06-29 Seiichi SATO <ssato@sh.rim.or.jp>

	* Extended an API of scrollbar plugin to load new style scrollbar
	  which has an rcfile.
	* To use x_imagelib_load_file() from plugin side, added
	  '-export-dynamic' to link option.